# trait-aliases

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  SECURITY.md  changelogging.toml
.github/workflows/: release.yml  test.yml
changes/: ~docs.internal.md  ~reserved.change.md  ~ui.internal.md
src/: generate.rs  lib.rs  parse.rs  special.rs
tests/: ui.rs
tests/ui/correct/: associated.rs  bounds.rs  clause.rs  combination.rs  equivalent.rs  generic.rs  interchangable.rs  lifetime.rs  sized.rs
tests/ui/incorrect/: multiple.rs  multiple.stderr  reserved.rs  reserved.stderr
